_practice/250309_24local1_try2/manifest/fluentbit.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentbit
  namespace: kube-system
  labels:
    app: fluentbit
spec:
  selector:
    matchLabels:
      name: fluentbit
  template:
    metadata:
      labels:
        name: fluentbit
    spec:
      tolerations:
        - key: dedicated
          value: app
          effect: NoSchedule
      serviceAccountName: fluentbit
      containers:
        - name: fluentbit
          image: public.ecr.aws/aws-observability/aws-for-fluent-bit:stable
          ports:
            - containerPort: 2020
              name: api
            - containerPort: 24224
              name: forward
          volumeMounts:
            - name: varlog
              mountPath: /var/log/pods
            - name: config
              mountPath: /fluent-bit/etc/
      volumes:
        - name: varlog
          hostPath:
            path: /var/log/pods
        - name: config
          configMap:
            name: fluentbit-config
