_practice/250309_24local1_try2/manifest/token.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token
  namespace: skills
spec:
  replicas: 2
  selector:
    matchLabels:
      app: token
  template:
    metadata:
      labels:
        app: token
        fargate: app
    spec:
      serviceAccountName: fluentbit
      containers:
        - name: app
          image: 658986583341.dkr.ecr.ap-northeast-2.amazonaws.com/token
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 0.5
              memory: "1G"
            requests:
              cpu: 0.5
              memory: "1G"
---
apiVersion: v1
kind: Service
metadata:
  name: token
  namespace: skills
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  selector:
    app: token
  ports:
    - port: 8080
      targetPort: 8080
